ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-app
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "microservices.demo.com"
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8080
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8081
          - path: /delivery
            pathType: Prefix
            backend:
              service:
                name: delivery
                port:
                  number: 8082
